# gitclub

./: .dockerignore  .hgignore  Dockerfile  Makefile  README.rst  docker-compose.smoke_test.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  migrate_database.py  pyproject.toml  sample.env
.github/workflows/: continuous_integration.yml
alembic/: env.py
alembic/versions/: 2023_01_31_0109-7a9c944644f8_first_version.py
gitclub/: authentication.py  authorization.py  authorization_rules.polar  config.py  dependantions.py  initial_data.py  main.py  resources.py  session.py  sessions.py
gitclub/models/: __init__.py  issue.py  organization.py  repository.py  user.py  user_organization.py  user_repository.py
gitclub/routers/: issue.py  login.py  organization.py  repository.py  user.py
gitclub/schemas/: issue.py  organization.py  repository.py  user_organization.py  user_repository.py
scripts/: migrate_database.py  smoke_test.py  test_project.py
tests/: conftest.py  test_authorization.py  test_schemas.py  utils.py
tests/models/: test_schemas.py  test_user.py
tests/routers/: test_issue.py  test_login.py  test_organization.py  test_repository.py  test_user.py
