[tool.poetry]
name = "GitClub FastAPI"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
hypercorn = "*"
loguru = "*"
orjson = "*"
passlib = { extras = ["argon2"], version = "*" }
psycopg2 = "*"
python = "^3.11"
python-dotenv = "*"
tenacity = "*"
uvloop = "*"

[tool.poetry.dev-dependencies]
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
blue = "*"
Faker = "*"
httpx = "*"
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["A003"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S"]
"smoke_test.py" = ["S"]
