[tool.poetry]
name = "GitClub FastAPI"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
asyncpg = "*"
databases = "*"
email_validator = "*"
fastapi = "*"
hypercorn = "*"
loguru = "*"
orjson = "*"
passlib = { extras = ["argon2"], version = "*" }
psycopg2 = "*"
python = "^3.11"
python-dotenv = "*"
redis = { version = "*", extras = ["hiredis"] }
tenacity = "*"
uvloop = "*"
alembic = "^1.9.2"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "*"
alt-pytest-asyncio = "*"
blue = "*"
Faker = "*"
httpx = "*"
mypy = "*"
pip-audit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
types-redis = "*"

[tool.blue]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "T10",
    "UP",
    "W",
]
ignore = ["A002", "A003", "B008"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S", "PLR2004"]
"smoke_test.py" = ["S", "PLR2004"]
